add swagger for auth handler
